Add sass to project

--- a/1template/views/layout.ejs
+++ b/1template/views/layout.ejs
@@ -12,8 +12,8 @@
     <!--<link rel="icon" type="image/png" href="/images/favicons/favicon-16x16.png" sizes="16x16">-->
     <!--<link rel="manifest" href="/manifest.json">-->
     <!--<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Crete+Round:400italic" />-->
-    <!--<link rel="stylesheet" ng-href="/build/css/lib.css" />-->
-    <!--<link rel="stylesheet" ng-href="/build/css/app.css">-->
+    <link rel="stylesheet" ng-href="/build/css/lib.css" />
+    <link rel="stylesheet" ng-href="/build/css/app.css">
     <script src="/build/js/lib.js"></script>
     <script src="/build/js/app.js"></script>
     <script>
