Lean out the scss files into one for now

--- a/1template/public/sass/app.scss
+++ b/1template/public/sass/app.scss
@@ -1,5 +1,6 @@
-// Import variables
-@import 'variables';
+// variables
+$pink: #e71d72;
 
-// Import 'global' structures, such as footer and layout and grid
-@import 'layout/layout';
+.example-text {
+    color: $pink;
+}
