Change how skeleton grid system is imported so can override variables

--- a/1template/public/sass/app.scss
+++ b/1template/public/sass/app.scss
@@ -1,5 +1,9 @@
 // variables
 $pink: #e71d72;
+$primary-color: $pink; // override skeleton's variables
+
+// Import skeleton gridsystem
+@import '../bower_components/Skeleton-Sass/scss/skeleton';
 
 .example-text {
     color: $pink;
