--- a/1template/public/views/layout.html
+++ b/1template/public/views/layout.html
@@ -3,29 +3,13 @@
 		<nav class="nav">
 			<div class="container">
 				<div class="nav__topbar clearfix">
-					<button class="nav__menu-button">
-						<span class="nav__menu-button__icon-bar"></span>
-						<span class="nav__menu-button__icon-bar"></span>
-						<span class="nav__menu-button__icon-bar"></span>
-						<span class="nav__menu-button__icon-bar"></span>
-					</button>
 					<div class="nav__logo"><a class="" ui-sref="home"><span class="sr-only">MySite</span></a></div>
-					<a href="#" class="nav__login">
-						<span>Login</span>
-					</a>
-				</div>
-
-				<div class="nav__items">
-					<ul>
-						<li>
-						</li>
-					</ul>
 				</div>
 			</div>
 		</nav>
 	</div>
 </div>
-<div ui-view class="main-content main-content--{{::$root.sector || $root.siteArea || 'home'}}"></div>
+<div ui-view class="main-content"></div>
 <footer>
 	<div class="container">
 		<div class="row">
