--- a/facebook-login/public/views/home.html
+++ b/facebook-login/public/views/home.html
@@ -1,1 +1,9 @@
-﻿test
+﻿Like Tim's bits:
+<div class="fb-like"
+     data-href="http://tims-bits.unegma.com"
+     data-layout="button_count"
+     data-action="like"
+     data-show-faces="false"
+     data-width="0px"
+     data-share="true"
+></div>
