--- a/facebook-login/views/layout.ejs
+++ b/facebook-login/views/layout.ejs
@@ -14,6 +14,26 @@
 <%- defineContent('head') %>
 </head>
 <body class="{{bodyClass}} {{extraClass}}" device-detector>
+
+    <!-- Facebook: https://developers.facebook.com/docs/javascript/advanced-setup -->
+    <script>
+        window.fbAsyncInit = function() {
+            FB.init({
+                appId      : '1607575896206644',
+                xfbml      : true,
+                version    : 'v2.7'
+            });
+        };
+
+        (function(d, s, id){
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) {return;}
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
+
     <div ui-view></div>
     <%- body %>
 </body>
