Add basic facebook login flow

--- a/facebook-login/public/views/home.html
+++ b/facebook-login/public/views/home.html
@@ -7,3 +7,12 @@
      data-width="0px"
      data-share="true"
 ></div>
+
+
+<div>
+    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+    </fb:login-button>
+
+    <div id="status">
+    </div>
+</div>
