Update facebook script to use app id from environment variables

--- a/facebook-login/views/layout.ejs
+++ b/facebook-login/views/layout.ejs
@@ -51,7 +51,7 @@
 
         window.fbAsyncInit = function() {
             FB.init({
-                appId      : '1607575896206644',
+                appId      : "<%- process.env.FACEBOOK_APP_ID %>",
                 xfbml      : true,
                 version    : 'v2.7'
             });
