--- a/facebook-login/public/views/home.html
+++ b/facebook-login/public/views/home.html
@@ -19,6 +19,22 @@
 
 
 <script>
+    // Now that we've initialized the JavaScript SDK, we call
+    // FB.getLoginStatus().  This function gets the state of the
+    // person visiting this page and can return one of three states to
+    // the callback you provide.  They can be:
+    //
+    // 1. Logged into your app ('connected')
+    // 2. Logged into Facebook, but not your app ('not_authorized')
+    // 3. Not logged into Facebook and can't tell if they are logged into
+    //    your app or not.
+    //
+    // These three cases are handled in the callback function.
+    // todo this was moved from inside window.fbAsyncInit = function() { so may not work here
+    FB.getLoginStatus(function(response) {
+        statusChangeCallback(response);
+    });
+
     // This is called with the results from from FB.getLoginStatus().
     function statusChangeCallback(response) {
         console.log('statusChangeCallback');
