--- a/facebook-login/public/views/layout.html
+++ b/facebook-login/public/views/layout.html
@@ -15,6 +15,7 @@
 		<div class="row">
 			<div class="footer--copyright">
 				<p>Copyright &#169; {{::copyrightYear}}</p>
+				<p>Hello: {{::user}}</p>
 			</div>
 		</div>
 	</div>
